# olympus-sim

./: .dockerignore  .gitignore  .windsurfrules  AUTOMATION_README.md  CLAUDE.md  Dockerfile.ci  Dockerfile.dashboard  Dockerfile.metrics  Dockerfile.network  Dockerfile.simulation  FINAL_STATUS.md  HARDWARE_REMEDIATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LAUNCHER_README.md  MQTT_GAZEBO_INTEGRATION.md  MakeFile  Makefile  OLYMPUS_ARCHITECTURE.md  README-Docker.md  README.md  REFACTORING_SUMMARY.md  TEST_SUMMARY.md  connect_demo.ps1  debug_threejs_simulation.html  docker-compose.dev.yml  docker-compose.yml  generate_test_events.py  kill_olympus.sh  launch_integrated_simulation.sh  main_simulation.py  manipulate_scene.py  mmwave_rviz_config.rviz  mqtt_visualizer.py  olympus  open_simulation.sh  pytest.ini  requirements-step4.txt  requirements.txt  run_olympus.py  run_simulation.sh  (+15 more)
.claude/: settings.local.json
.github/workflows/: ci-simulation-test.yml  docker-ci.yml
automation/: README.md  automation_demo.py  live_automation.py  simple_automation.py
dashboard/: app.py  app_simple.py  direct_metrics.py  live_data_manager.py  requirements.txt
dashboard/static/: dashboard.js  style.css
dashboard/static/js/: dashboard-3d-fixed.js  dashboard-3d-working.js  dashboard-3d.js  dashboard-minimal.js
dashboard/templates/: dashboard.html  dashboard_3d.html  dashboard_3d_fixed.html  dashboard_3d_working.html  dashboard_minimal.html  dashboard_simple.html
docker/: Dockerfile.ci  Dockerfile.dashboard  Dockerfile.metrics  Dockerfile.network  Dockerfile.simulation  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: IMPLEMENTATION_SUMMARY.md  OLYMPUS_ARCHITECTURE.md  gazebo_ros_integration.md
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/components/sensor_iface/: CMakeLists.txt  sensor_iface.c
firmware/hello_world/: CMakeLists.txt  main.c  sdkconfig  sdkconfig.defaults
firmware/hello_world/main/: CMakeLists.txt  hello_world_main.c
firmware/main/: CMakeLists.txt  main.c
infra/: Dockerfile  docker-compose.yml  mosquitto.conf
infra/iris/: Dockerfile  package.json
infra/iris/public/: dashboard.js  index.html  styles.css
infra/iris/src/: server.js
infra/metrics/: Dockerfile  metrics_collector.py  requirements.txt
infra/nodered/: flows.json
infra/ns3/: Dockerfile  mesh_controller.py
install/: local_setup.sh  setup.sh
legacy_launch/: README.md
log/: latest_build
metrics/: latency_battery_tracker.py  test_latency_fix.py  working_automation.py
metrics/metrics/: battery_metrics.csv  latency_metrics.csv
network/: __init__.py  cli.py  config.py  network_config.json  network_realism.py
olympus-dashboard/: backend_bridge.py  package-lock.json  package.json  simple_backend.py  tailwind.config.js
olympus-dashboard/public/: index.html
olympus-dashboard/src/: App.tsx  index.css
olympus-dashboard/src/hooks/: useKeyboardShortcuts.ts
olympus-dashboard/src/services/: api.ts  websocket.ts
olympus-dashboard/src/store/: simulationStore.ts
olympus-dashboard/src/types/: olympus.ts
scripts/: demo_simulation.py  docker-entrypoint.sh  fix_wsl_gazebo.sh  metrics_collector.py  mqtt_demo.py  network_controller.py  physics_simulation.py  quick-test.sh  run_integrated_simulation.sh  run_mqtt_only_simulation.sh  run_ros2_simulation.py  run_simulation.py  simple_test.py  simulation_runner.py  start-olympus.sh  test_mqtt.py  validate_setup.py
scripts/launch/: launch_ros_gazebo.sh
scripts/setup/: fix_gazebo_world.sh
scripts/test_utils/: check_rviz_topics.py  generate_test_events.py  test_automation.py
scripts/utils/: connect_demo.ps1
sim/: __init__.py
sim/gazebo/: apartment_world.sdf
sim/gazebo/plugins/: CMakeLists.txt  MmWavePointCloudLoader.cc  MmWavePointCloudLoader.hh  MmWaveSensorPlugin.cc  MmWaveSensorPlugin.cc.bak  MmWaveSensorPlugin.hh  MmWaveSensorWslCompat.cc  MmWaveSensorWslCompat.hh  OlympusMQTTPlugin.cc  OlympusMQTTPlugin.hh  build_mmwave_plugin.sh
sim/gazebo/plugins/core/: MmWaveSensorPlugin.cc  MmWaveSensorPlugin.hh  MmWaveSensorWslCompat.cc
sim/gazebo/plugins/messaging/: MmWaveMessageHandler.cc  MmWaveMessageHandler.hh  OlympusMQTTPlugin.cc
sim/gazebo/plugins/pointcloud/: MmWaveBedroomScenarioGenerator.cc  MmWaveDefaultScenarioGenerator.cc  MmWavePointCloudGenerator.cc  MmWavePointCloudGenerator.hh  MmWavePointCloudLoader.cc  MmWavePointCloudLoader.hh  MmWavePointCloudScenarioGenerators.cc  MmWavePointCloudScenarioGenerators.hh  MmWaveRoomScenarioGenerator.cc
sim/gazebo/plugins/raycast/: MmWaveSensorRay.cc  MmWaveSensorRay.hh  MmWaveSensorScene.cc  MmWaveSensorScene.hh
sim/gazebo/plugins/sensor_config/: MmWaveSensorConfig.cc  MmWaveSensorConfig.hh
sim/gazebo/worlds/: apartment.sdf  mmwave_minimal.sdf  mmwave_test.sdf  mmwave_test_fixed.sdf  mmwave_test_new.sdf  mmwave_test_wsl.sdf  olympus.world  olympus.world.new  (+5 more)
sim/ns3/: mesh_controller.py
sim/python/: __init__.py  hardware_sensor_bridge.py  mqtt_broker_sim.py  mqtt_real.py  olympus_nodes.py  peripheral_bridge.py  radar_replay_server.py  sensor_bridge.py  sensor_stubs.py
sim/qemu/: esp32_runner.py
sim/renode/: README.md  esp32_wroom32.repl  run.resc
sim/ros2/: MMWAVE_BRIDGE_REFACTORING.md  README.md  install_mmwave_bridge_deps.sh  launch_mmwave_bridge.py  launch_olympus_simulation.py  launch_rviz.sh  minimal_gz_transport_test.py  mmwave_mqtt_bridge.py  mmwave_ros2_bridge.py  monitor_topics.py  mqtt_ros2_bridge.py  multi_mmwave_mqtt_bridge.py  test_mmwave_bridge.py  time_sync_bridge.py
sim/threejs/: mqtt_bridge.py  pointcloud_viewer.html  threejs_ros2_bridge.py
tests/: README.md  __init__.py  test_automation_loop.py  test_ci_simulation.py  test_demo.py  test_full_simulation.py  test_hardware_level.py  test_local_ci.py  test_mmwave_mqtt.py  test_peripherals.py  test_step4_metrics.py  test_step5_network.py
tools/: README.md  launch_olympus.py  launch_web_viz.py  manipulate_scene.py  test_rviz.sh  verify_setup.py
tools/mcp-server/: README.md  claude_mcp_config.json  package-lock.json  package.json  tsconfig.json
utils/: simple_demo.py
(+67 files in other folders)
